Adds the program section text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./src/script.js" defer></script>
     <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <title>Star Language Institute</title>
 </head>
 
@@ -21,10 +22,16 @@
                     <!-- <p class="tracking-tighter font-serif">Star Language Institute</p> -->
                 </div>
                 <div class="hidden md:flex space-x-12 pr-8">
-                    <a href="#" class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-darkBlue">Home</a>
-                    <a href="#about_desktop" class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-darkBlue">About us</a>
-                    <a href="#programs" class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-darkBlue">Services</a>
-                    <a href="#address" class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-darkBlue">Contact Us</a>
+                    <a href="#"
+                        class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-darkBlue">Home</a>
+                    <a href="#about_desktop"
+                        class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-darkBlue">About
+                        us</a>
+                    <a href="#programs"
+                        class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-darkBlue">Services</a>
+                    <a href="#address"
+                        class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-darkBlue">Contact
+                        Us</a>
                 </div>
                 <!-- <div>
                 <a href="" class="rounded-full bg-brightOrange px-6 p-2 ">Get Started</a>
@@ -37,7 +44,7 @@
                 class="break-normal text-center font-bold text-2xl align-top  tracking-wider not-italic title md:text-3xl">
                 Star
                 Language Institute</p>
-                <p id="tag_line" class="mb-6 font-extralight"></p>
+            <p id="tag_line" class="mb-6 font-extralight"></p>
             <p id="quote"
                 class="z-3 break-normal font-extralight text-base antialiased font-sans w-1/2 leading-loose text-center text-1xl  align-baseline mb-1 tracking-wide whitespace-normal md:text-3xl"
                 id="quote"></p>
@@ -90,13 +97,11 @@
             <div class="text w-3/4 md:w-1/4 break-normal  space-y-8 ">
                 <p class="text-darkBlue  underline decoration-wavy underline-offset-4 text-center md:text-start">
                     Language</p>
-                <p class="text antialiased">Lorem ipsum dolor sit amet.
-                    Illum qui sit enim excepturi!
-                    Tempore consequuntur molestias iure aliquid.
-                    Odio deleniti impedit animi harum!
-                    Odit suscipit cupiditate aspernatur optio.
-                    Assumenda praesentium tenetur optio perferendis.
-                    Natus omnis dolores laborum quod.</p>
+                <p class="text antialiased">Our Program has been developed in close cooperation with the British
+                    Language Centre - a leading Adult Language Education Centre with multiple facilities, and an
+                    official English Language Testing Centre for London Chamber of Commerce and Industry, TELC (The
+                    European Language Certificates), and by Upon completion of each Course Level, (there are 6 levels
+                    and 6 Certificates) .</p>
                 <a href="#programs"
                     class="no-underline hover:underline decoration-wavy underline-offset-4 text-darkBlue">view more</a>
             </div>
@@ -112,13 +117,10 @@
             <div class="text w-3/4 md:w-1/4 space-y-8 mb-4">
                 <p class="text-darkBlue underline decoration-wavy underline-offset-4 text-center md:text-start">
                     Certification</p>
-                <p class="break-normal text-justify antialiased ">Lorem ipsum dolor sit amet.
-                    Illum qui sit enim excepturi!
-                    Tempore consequuntur molestias iure aliquid.
-                    Odio deleniti impedit animi harum!
-                    Odit suscipit cupiditate aspernatur optio.
-                    Assumenda praesentium tenetur optio perferendis.
-                    Natus omnis dolores laborum quod.</p>
+                <p class="break-normal text-justify antialiased ">
+                    Upon completion of each Course Level, (there are 6 levels and 6 Certificates), you may sit for
+                    examination of your Mastery of the Unit. Our students are most thoroughly prepared for these Online
+                    exams that you can undertake numerous time.</p>
             </div>
 
         </div>
@@ -255,23 +257,39 @@
                 </div>
                 <div class="space-y-1">
                     <p class="text-brightOrange my-3">About</p>
-                    <p><a href="#" class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Home</a></p>
-                    <p><a href="#about_desktop" class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">About us</a></p>
-                    <p><a href="#programs" class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Services</a></p>
-                    <p><a href="#address" class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Contact Us</a></p>
+                    <p><a href="#"
+                            class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Home</a>
+                    </p>
+                    <p><a href="#about_desktop"
+                            class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">About
+                            us</a></p>
+                    <p><a href="#programs"
+                            class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Services</a>
+                    </p>
+                    <p><a href="#address"
+                            class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Contact
+                            Us</a></p>
                 </div>
                 <div class="space-y-1">
                     <p class="text-brightOrange my-3 ">Help</p>
-                    <p class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Faqs</p>
-                    <p class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Contact us</p>
+                    <p
+                        class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">
+                        Faqs</p>
+                    <p
+                        class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">
+                        Contact us</p>
                 </div>
 
             </div>
         </div>
         <div class="flex justify-between align-items space-x-5">
             <div class="space-x-2 md:space-x-5">
-                <a href=""class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Terms and Conditions</a>
-                <a href="" class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Privacy Policy</a>
+                <a href=""
+                    class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Terms
+                    and Conditions</a>
+                <a href=""
+                    class="font bold text-1xl no-underline hover:underline decoration-wavy underline-offset-4 hover:text-brightOrange">Privacy
+                    Policy</a>
             </div>
             <div class="flex space-x-2 md:space-x-12">
                 <a href=""> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
