Adds the dropdown selection for the form

--- a/index.html
+++ b/index.html
@@ -217,10 +217,9 @@
                             <select name="number" id="number"
                                 class="placeholder:italic placeholder:text-grey  border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
                                 <option>General</option>
-                                <option></option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
+                                <option>Arabic</option>
+                                <option>English</option>
+                                <option>Kiswahili</option>
                             </select>
                         </label>
                     </div>
