bg:Bug in the form submission

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                     <div class="container flex flex-col md:flex-row md:space-x-5">
                         <label class="block py-2 ">
                             <span class="font-light text-darkBlue">Enter Your Email</span>
-                            <input type="email" name="number" placeholder="someone@mail.com" id="number"
+                            <input type="email" name="email" placeholder="someone@mail.com" id="number"
                                 class="placeholder:italic caret-brightOrange placeholder:text-grey  border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
                         </label>
                         <label class="block py-2 ">
                             <span class="font-light text-darkBlue">Language</span>
-                            <select name="number" id="number"
+                            <select name="language" id="number"
                                 class="placeholder:italic placeholder:text-grey  border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
                                 <option>General</option>
                                 <option>Arabic</option>
@@ -230,9 +230,9 @@
                             placeholder="Give us some more details to improve your experience"
                             class="placeholder:italic placeholder:text-grey mt-1 caret-brightOrange block border-black px-0.5 border-0 border-b-2 focus:border-brightOrange focus:ring-0 rounded w-3/4"></textarea>
                     </label>
-                    <a href="" type=submit
-                        class="rounded hover:rounded-lg bg-brightOrange px-6 p-2 text-white font-light">Get
-                        Started</a>
+                    <input type="submit"
+                        class="rounded  bg-brightOrange px-6 p-2 text-white font-light" value="Get Started">
+                        
                 </form>
             </div>
         </div>
