bg:Form submission

--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
                             <span class="font-light text-darkBlue">Language</span>
                             <select name="language" id="number"
                                 class="placeholder:italic placeholder:text-grey  border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
-                                <option>General</option>
-                                <option>Arabic</option>
-                                <option>English</option>
-                                <option>Kiswahili</option>
+                                <option >General</option>
+                                <option value="0">Arabic</option>
+                                <option value="1">English</option>
+                                <option value="2">Kiswahili</option>
                             </select>
                         </label>
                     </div>
