--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="  mx-auto px-6 py-1 mb-5">
             <div class=" mx-auto flex items-center justify-between">
                 <div class="p-2 flex items-center">
-                    <img src="./assets/logo.svg" id="logo" alt="">
+                    <img src="" id="logo" alt="logo">
                     <!-- <p class="tracking-tighter font-serif">Star Language Institute</p> -->
                 </div>
                 <div class="hidden md:flex space-x-12 pr-8">
@@ -179,7 +179,7 @@
         </div>
     </section>
     <!-- Form  -->
-
+<section class="container my-10 md:mb-0">
     <blockquote class="text-2xl font-semibold italic text-center text-slate-900" id="address">
         Are you interested in
         <span
